--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_svg: ^2.0.10+1
   loading_animation_widget: ^1.3.0
   local_auth: ^2.3.0
+  geolocator: ^13.0.1
+  permission_handler: ^11.3.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
