--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   permission_handler: ^11.3.1
   url_launcher: ^6.3.1
   intl: ^0.19.0
+  timelines: ^0.1.0
 
 dev_dependencies:
   flutter_test:
