--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,9 @@ dependencies:
   intl: ^0.19.0
   timelines: ^0.1.0
   jitsi_meet_wrapper: ^0.2.0+1
+  pdf: ^3.11.1
+  printing: ^5.13.4
+  share_plus: ^10.1.3
 
 dev_dependencies:
   flutter_test:
