--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,11 +47,12 @@ dependencies:
   permission_handler: ^11.3.1
   url_launcher: ^6.3.1
   intl: ^0.19.0
-  timelines: ^0.1.0
+  # timelines: ^0.1.0
   jitsi_meet_wrapper: ^0.2.0+1
   pdf: ^3.11.1
   printing: ^5.13.4
   share_plus: ^10.1.3
+  timelines_plus: ^1.0.6
 
 dev_dependencies:
   flutter_test:
