--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,9 +50,10 @@ dependencies:
   # timelines: ^0.1.0
   jitsi_meet_wrapper: ^0.2.0+1
   pdf: ^3.11.1
-  printing: ^5.13.4
-  share_plus: ^10.1.3
+  printing: ^5.14.0
+  share_plus: ^10.1.4
   timelines_plus: ^1.0.6
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
