--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,7 +48,7 @@ dependencies:
   url_launcher: ^6.3.1
   intl: ^0.19.0
   # timelines: ^0.1.0
-  jitsi_meet_wrapper: ^0.2.0+1
+  # jitsi_meet_wrapper: ^0.2.0+1
   pdf: ^3.11.1
   printing: ^5.13.4
   share_plus: ^10.1.3
